# HR-System

./: .gitignore  CHANGELOG.md  GitHub迁移完成.md  Git提交约定.md  NGROK_CONFIG.md  README.md  TalentLens产品规划.md  admin.html  admin_v3.html  admin_v4.html  debug.html  diagnostic.html  docker-compose.yml  git-commit.sh  questionnaires.js  start_for_demo.sh  stop_demo.sh  switch-to-github.sh  test.html  test_data_generator.html  v2.3功能测试清单.md  v2.3完成总结.md  v2.3更新说明.md  v2.4完成总结.md  v2.5快速使用指南.md  v2.5更新说明.md  v3.0-阶段1&2完整交付.md  v3.0-阶段1完成说明.md  v3.0-阶段2完成说明.md  v3.0产品规划方案.md  v3.0使用指南.md  v3.0开发说明.md  人事画像系统-安装部署维护手册.md  使用说明.txt  切换到GitHub指南.md  删除Gitee仓库指南.md  快速测试指南.md  快速验证指南.md  提交指南.md  添加SSH密钥到GitHub.md  (+6 more)
backend/: .env.example  .flake8  README.md  alembic.ini  app.py  config.py  create_correct_test_data.py  create_full_test_data.py  create_one_test_per_person.py  create_one_user_three_tests.py  create_professional_test_data.py  create_real_submissions.py  pre_deploy_check.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20251129_01_init_submissions.py  20251129_02_add_users.py  (+6 more)
backend/app/: custom_scoring.py  main.py  models.py  models_assessment.py  models_spec.py  professional_questionnaires.json  professional_scoring.py  schemas.py  security.py
backend/app/api/: v2.py
backend/migrations/: add_category_field.sql
backend/scripts/: README_DATABASE.md  backup-sqlite.sh  check_syntax.py  export_questionnaires.js  fix_epq_count.py  init_questionnaires.py  restore-sqlite.sh  seed_questionnaires.py  start_server.sh
(+217 files in other folders)
